<resources>
    <string name="app_name">Falcon Browser</string>
    <string name="app_ok">OK</string>
    <string name="app_help">Help</string>
    <string name="app_cancel">Cancel</string>
    <string name="app_done">Done</string>
    <string name="app_error">Error</string>
    <string name="app_warning">Warning</string>
    <string name="app_permission">To use this feature you must grant permission. After that restart the app.</string>
    <string name="list_empty">List is empty</string>
    <string name="album_title_bookmarks">Bookmarks</string>
    <string name="album_title_history">History</string>
    <string name="album_title_home">Home</string>
    <string name="album_title_tab">Opened Tabs</string>
    <string name="search_hint">Search</string>
    <string name="create_new">New</string>
    <string name="color_red">Red</string>
    <string name="color_pink">Pink</string>
    <string name="color_purple">Purple</string>
    <string name="color_blue">Blue</string>
    <string name="color_teal">Teal</string>
    <string name="color_green">Green</string>
    <string name="color_lime">Lime</string>
    <string name="color_yellow">Yellow</string>
    <string name="color_orange">Orange</string>
    <string name="color_brown">Brown</string>
    <string name="color_grey">Grey</string>
    <string name="main_menu_new_tab">New tab (background)</string>
    <string name="main_menu_new_tabProfile">New tab (with profile …)</string>
    <string name="main_menu_new_tabOpen">New tab (foreground)</string>
    <string name="main_omnibox_input_hint">Search or type URL</string>
    <string name="menu_open_with">Open link with …</string>
    <string name="menu_quit">Quit</string>
    <string name="menu_openFav">Open Favorite</string>
    <string name="menu_reportBroken">Report Broken Page</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_closeTab">Close tab</string>
    <string name="menu_download">Open downloads</string>
    <string name="menu_fav">Save as favorite</string>
    <string name="menu_sc">Shortcut on home screen</string>
    <string name="menu_sort">Sort by …</string>
    <string name="menu_filter">Filter by …</string>
    <string name="menu_share_link">Share link</string>
    <string name="menu_save_home">Save at Home</string>
    <string name="menu_save_bookmark">Save as bookmark</string>
    <string name="menu_save_as">Save as …</string>
    <string name="menu_save_pdf">Save as PDF</string>
    <string name="menu_shareClipboard">Copy to clipboard</string>
    <string name="menu_other_searchSite">Search on site</string>
    <string name="link_you_copied">Link you copied</string>
    <string name="dialog_title_hint">Title:</string>
    <string name="dialog_URL_hint">URL:</string>
    <string name="dialog_extension_hint">Extension (for example: \".jpg\"):</string>
    <string name="dialog_sign_in_username">Username</string>
    <string name="dialog_sign_in_password">Password</string>
    <string name="dialog_title_download">Download the file?</string>
    <string name="dialog_content_resubmission">Resubmit your data?</string>
    <string name="dialog_content_ssl_error">The certificate of the site is not trusted. Proceed anyway?</string>
    <string name="dialog_sortName">Sort by name</string>
    <string name="dialog_sortIcon">Sort by icon</string>
    <string name="dialog_sortDate">Sort by date</string>
    <string name="setting_label">Settings</string>
    <string name="setting_title_browser">Browser Settings</string>
    <string name="setting_title_general">General</string>
    <string name="setting_title_search_engine">Search Engine</string>
    <string name="setting_summary_search_engine_google">Google</string>
    <string name="setting_summary_search_engine_duckduckgo">DuckDuckGo</string>
    <string name="setting_summary_search_engine_startpage">StartPage</string>
    <string name="setting_summary_search_engine_bing">Bing</string>
    <string name="setting_summary_search_engine_baidu">Baidu</string>
    <string name="setting_summary_search_engine_startpage_de">StartPage (de)</string>
    <string name="setting_summary_search_engine_searx">Searx</string>
    <string name="setting_summary_search_engine_qwant">Qwant</string>
    <string name="setting_summary_search_engine_ecosia">Ecosia</string>
    <string name="setting_summary_search_engine_metager">Metager</string>
    <string name="setting_title_font">Font size</string>
    <string name="setting_title_dom">DOM Storage</string>
    <string name="privacy_redirect">Redirect</string>
    <string name="privacy_redirect_twitter">Twitter</string>
    <string name="privacy_redirect_youTube">YouTube</string>
    <string name="custom_redirects">Custom redirects</string>
    <string name="source">Source</string>
    <string name="target">Target</string>
    <string name="setting_title_save_data">Request \'Save Data\'</string>
    <string name="setting_title_profiles">Profiles</string>
    <string name="setting_title_profiles_edit">Edit profiles</string>
    <string name="setting_title_profiles_trustedList">Trusted websites</string>
    <string name="setting_title_profiles_standardList">Standard websites</string>
    <string name="setting_title_profiles_protectedList">Protected websites</string>
    <string name="setting_title_profiles_startApp">Profile on app start</string>
    <string name="setting_title_profiles_trusted">Trusted</string>
    <string name="setting_title_profiles_standard">Standard</string>
    <string name="setting_title_profiles_protected">Protected</string>
    <string name="setting_title_profiles_changed">Custom</string>
    <string name="setting_title_profiles_active">Profile</string>
    <string name="setting_title_profiles_dataUsage">Data usage</string>
    <string name="setting_title_profiles_privacy">Privacy</string>
    <string name="setting_title_profiles_Security">Security</string>
    <string name="setting_title_images">Images</string>
    <string name="setting_title_cookie">Cookies</string>
    <string name="setting_summary_cookie_delete">If enabled, all cookies will be deleted. Also the Cookies of trusted websites.</string>
    <string name="setting_title_javascript_popUp">Popups</string>
    <string name="setting_title_javascript">JavaScript</string>
    <string name="setting_title_adblock">AdBlock</string>
    <string name="setting_summary_adblock">Enable AdBlock to block annoying ads. Sites also load faster when enabled.</string>
    <string name="setting_title_adblockHost">Blocked content</string>
    <string name="setting_title_location">Location</string>
    <string name="setting_title_history">History</string>
    <string name="setting_title_autofill">Form Data</string>
    <string name="setting_summary_autofill">Enable the saving of form data (Android Nougat and below) or autofill service (Android Oreo and above).</string>
    <string name="data_summary">All files will be exported to the \"Documents/browser_backup/\" directory of your SD-card.</string>
    <string name="clear_title_quit">Clear on application exit</string>
    <string name="clear_title_cache">Clear Cache</string>
    <string name="clear_title_cookie">Clear Cookies</string>
    <string name="clear_title_history">Clear History</string>
    <string name="localData">Clear on device stored data</string>
    <string name="clear_title_deleteDatabase">Delete database</string>
    <string name="clear_summary_deleteDatabase">Delete the whole database (Startpage, bookmarks, history and all whitelists).</string>
    <string name="setting_title_app">App Settings</string>
    <string name="setting_title_ui">Behavior/UI</string>
    <string name="setting_title_data">Backup</string>
    <string name="setting_filter">Bookmark filter</string>
    <string name="setting_title_fav">Favorite</string>
    <string name="setting_title_reload">Swipe down to reload</string>
    <string name="setting_title_searchEngine">Custom search engine</string>
    <string name="setting_title_userAgent">Custom user agent</string>
    <string name="setting_title_clipboard_record">Clipboard record</string>
    <string name="setting_title_fingerPrint">Fingerprint protection</string>
    <string name="setting_theme">Theme</string>
    <string name="setting_theme_system">System</string>
    <string name="setting_theme_OLED">OLED</string>
    <string name="setting_theme_wallpaper">Wallpaper based</string>
    <string name="setting_title_hideToolbar">Hide toolbar</string>
    <string name="setting_title_behavior">Behavior</string>
    <string name="setting_title_confirm_exit">Confirm browser exit</string>
    <string name="setting_title_confirm_tab_close">Confirm tab close</string>
    <string name="setting_overView_onStart_title">Show on start</string>
    <string name="setting_gestures">Gestures</string>
    <string name="setting_title_longPress">Long press</string>
    <string name="setting_title_overViewButton">Overview</string>
    <string name="setting_gesture_up">Swipe up</string>
    <string name="setting_gesture_down">Swipe down</string>
    <string name="setting_gesture_left">Swipe left</string>
    <string name="setting_gesture_right">Swipe right</string>
    <string name="setting_gesture_01">Nothing</string>
    <string name="setting_gesture_02">Forward in history</string>
    <string name="setting_gesture_03">Back in history</string>
    <string name="setting_gesture_04">Scroll to top</string>
    <string name="setting_gesture_05">Scroll to bottom</string>
    <string name="setting_gesture_06">Switch to left tab</string>
    <string name="setting_gesture_07">Switch to right tab</string>
    <string name="setting_gesture_08">Show overview</string>
    <string name="setting_gesture_09">Open new tab</string>
    <string name="setting_gesture_10">Close tab</string>
    <string name="setting_gesture_11">Show fast toggle</string>
    <string name="title_appData">App data</string>
    <string name="hint_database">This will delete current data. Proceed?</string>
    <string name="settings_data_restore">Restore</string>
    <string name="toast_add_whitelist_successful">Successfully added Domain</string>
    <string name="toast_copy_successful">Successfully copied</string>
    <string name="toast_delete_successful">Successfully deleted</string>
    <string name="toast_domain_already_exists">Domain already exists</string>
    <string name="toast_input_empty">You didn\'t input anything.</string>
    <string name="toast_invalid_domain">Invalid domain</string>
    <string name="toast_webview_forward">Can\'t load next site</string>
    <string name="toast_restart">You must restart \"Falcon Browser\" to apply changes. Close now?</string>
    <string name="toast_quit">Do you want to quit \"Falcon Browser\"?</string>
    <string name="toast_quit_TAB">Do you want to close the TAB?</string>
    <string name="toast_downloadComplete">Download complete. Open file manager?</string>
    <string name="toast_unsecured">Website uses an unsecured connection (\"http\"). Try a secure connection (\"https\")?</string>
    <string name="toast_backup">Backup data? This will overwrite the old backup.</string>
    <string name="menu_more">More</string>
    <string name="setting_title_camera">Allow camera usage</string>
    <string name="setting_title_microphone">Allow microphone usage</string>
    <string name="setting_title_tabsReload">Reload tabs</string>
    <string name="setting_title_tabsRestore">Restore tabs</string>
    <string name="setting_title_userInterface">User interface</string>
    <string name="setting_summary_tabsReload">Reload last opened tabs, when starting Falcon Browser.</string>
    <string name="setting_summary_tabsRestore">Restore tabs, when Falcon Browser gets killed by the system.</string>
    <string name="setting_title_screenOn">Keep screen on</string>
    <string name="setting_title_audioBackground">Play audio on background</string>
</resources>