<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/setting_title_browser">

        <Preference
            android:key="settings_general"
            android:title="@string/setting_title_general" />

        <Preference
            android:key="settings_start"
            android:title="@string/setting_title_profiles_privacy" />

        <Preference
            android:key="settings_clear"
            android:title="@string/menu_delete" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/setting_title_app">

        <Preference
            android:key="settings_ui"
            android:title="@string/setting_title_ui" />

        <Preference
            android:key="settings_filter"
            android:title="@string/setting_filter" />

        <Preference
            android:key="settings_gesture"
            android:title="@string/setting_gestures" />

        <Preference
            android:key="settings_data"
            android:title="@string/setting_title_data" />

    </PreferenceCategory>

</PreferenceScreen>