<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/setting_title_behavior">

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:icon="@drawable/icon_screen"
            android:key="sp_screenOn"
            android:summary="@string/setting_title_screenOn" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:icon="@drawable/icon_audio"
            android:key="sp_audioBackground"
            android:summary="@string/setting_title_audioBackground" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="sp_close_browser_confirm"
            android:summary="@string/setting_title_confirm_exit" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="sp_close_tab_confirm"
            android:summary="@string/setting_title_confirm_tab_close" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="sp_tabBackground"
            android:summary="@string/main_menu_new_tab" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="sp_reloadTabs"
            android:summary="@string/setting_summary_tabsReload"
            android:title="@string/setting_title_tabsReload" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="sp_restoreTabs"
            android:summary="@string/setting_summary_tabsRestore"
            android:title="@string/setting_title_tabsRestore" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/setting_title_userInterface">

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="hideToolbar"
            android:summary="@string/setting_title_hideToolbar" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="useDynamicColor"
            android:summary="@string/setting_theme_wallpaper" />

        <de.baumann.browser.preferences.ListSwitchPreference
            android:defaultValue="3"
            android:entries="@array/setting_entries_tab"
            android:entryValues="@array/setting_values_tab"
            android:key="start_tab"
            android:selectable="true"
            android:title="@string/setting_overView_onStart_title"
            app:listSwitchKey="start_tabStart"
            app:listSwitchKeyDefaultValue="false"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/setting_entries_theme"
            android:entryValues="@array/setting_values_theme"
            android:key="sp_theme"
            android:title="@string/setting_theme" />

        <ListPreference
            android:defaultValue="100"
            android:entries="@array/setting_entries_font"
            android:entryValues="@array/setting_values_font"
            android:key="sp_fontSize"
            android:title="@string/setting_title_font" />

    </PreferenceCategory>

</PreferenceScreen>