<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="sp_clear_quit"
        android:summary="@string/clear_title_quit" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="sp_clearIndexedDB"
        android:summary="@string/localData" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="sp_clear_cache"
        android:summary="@string/clear_title_cache" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="sp_clear_history"
        android:summary="@string/clear_title_history" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="sp_clear_cookie"
        android:summary="@string/setting_summary_cookie_delete"
        android:title="@string/clear_title_cookie" />

    <Preference
        android:key="sp_deleteDatabase"
        android:summary="@string/clear_summary_deleteDatabase"
        android:title="@string/clear_title_deleteDatabase" />

</PreferenceScreen>